test/fixtures/invalid/invalid-oneof.raml
#%RAML 0.8
---
baseUri: a
title: a
version: a
schemas:
  - foo: !include schemas/foo/object.json
/a:
  displayName: a
  post:
    displayName: a
    body:
      application/json:
        schema: |
          {
            "oneOf":[{
                "type": ["string", "integer"]
            }]
          }
    responses:
      200:
        body:
          application/json:
            schema: |
              {
                "type": "object",
                "properties": {
                  "a": {
                    "type": "string"
                  }
                }
              }
            example: |
              {
                "a": "Hello"
              }
